# easy_input_tools

./: Cargo.toml  README.md  package-lock.json
examples/: checkbox-ascii.rs  checkbox-unicode.rs  options-ascii.rs  options-unicode.rs
src/: lib.rs  main.rs
src/ascii/: checkbox.rs  input.rs  mod.rs  options.rs
src/custom/: checkbox.rs  input.rs  mod.rs  options.rs
src/unicode/: checkbox.rs  input.rs  options.rs
