[package]
name = "easy_input_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
crossterm = "0.27.0"
k_board = { version = "1.2.4", features = ["full"] }
term = "0.7.0"
termion = "4.0.1"
