[package]
name = "easy_input_tools"
version = "0.1.0"
edition = "2021"

authors = ["Malte Aschenbach"]
description = "A library for easy input tools"
license = "MIT"
repository = "https://github.com/maa28/easy_input_tools"
readme = "README.md"
keywords = ["input", "CLI", "tools"]
categories = ["command-line-interface", "command-line-utilities"]

[dependencies]
colored = "2.1.0"
crossterm = "0.27.0"
k_board = { version = "1.2.4", features = ["full"] }